# AutoChemplete

./: .gitignore  LICENSE  README.md
ml/: README.md
ml/data/: InChI_data_generation.py  dataframe_generation.py  delete_duplicate_files.py  generateDataframeFromChEMBL.py  generateImageFromChEMBL.py  (+5 more)
ui/: .env  Dockerfile  Dockerfile.migrations  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
ui/alembic/: env.py
ui/alembic/versions/: 1d487d13a14b_create_label_measurements_table.py  283d0369dca9_create_label_tasks_table.py  316631a121ec_create_sessions_table.py  a68a008f4c6c_create_treatment_table.py  ac4340aeecb1_create_interaction_events_table.py
ui/autochemplete/: config.py  main.py
ui/autochemplete/crud/: interaction_event.py  label_measurement.py  label_task.py  session.py
ui/autochemplete/logic/: chemistry.py
ui/autochemplete/logic/utils/: cache.py
ui/autochemplete/models/: interaction_event.py  label_measurement.py  label_task.py  session.py  treatment.py
ui/autochemplete/schemas/: chemistry.py  stats.py
ui/autochemplete/static/assets/: autochemplete-favicon.eps
ui/autochemplete/static/css/: base.css
ui/autochemplete/static/js/: App.jsx  accept_button.jsx  focus_comparison.jsx  image_card.jsx  kekule_editor.jsx  model_output_card.jsx  package-lock.json  package.json  script.js  similar_molecule_card.jsx  similar_molecules.jsx  webpack.config.js
ui/autochemplete/static/js/snackbar/: custom_snackbar.jsx  use_custom_snackbar.jsx
ui/autochemplete/templates/: home.html  label-form.html  label.html  layout.html
(+32 files in other folders)
